--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit --why",
+    "publish": "npm np"
   },
   "peerDependencies": {},
   "devDependencies": {
@@ -41,6 +42,7 @@
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.1.2",
     "husky": "^4.3.0",
+    "np": "^7.0.0",
     "prettier": "^2.1.2",
     "size-limit": "^4.6.0",
     "tsdx": "^0.14.1",
