--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "src"
   ],
   "engines": {
-    "node": ">=14"
+    "node": ">=15"
   },
   "scripts": {
     "start": "tsdx watch",
@@ -47,6 +47,9 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
+  },
+  "optionalDependencies": {
+    "yarn": "^1.22.10"
   },
   "husky": {
     "hooks": {
