updated readme and dependencies

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "peerDependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.12.10",
     "@size-limit/preset-small-lib": "^4.6.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
